added scripts for timestamps in pattern recognition

--- a/PatternMatchingTests/CMakeLists.txt
+++ b/PatternMatchingTests/CMakeLists.txt
@@ -44,6 +44,7 @@ TestDataGenerator.cxx
 MomDataGenerator.cxx
 TSMomDataGenerator.cxx
 PatDataGenerator.cxx
+TSPatDataGenerator.cxx
 ClassDataGenerator.cxx
 TestTubeGenerator.cxx
 
